--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Development Quiz</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet"
+        href="C:\Users\dell\bootcamp\RUT-VIRT-FSF-FT-02-2023-U-LOLC\week_3\web_dev_quiz\css\style.css">
 </head>
 
 <body>
@@ -17,39 +18,24 @@
 
         <div class="question-display hide">
             <h3 id="quest"></h3>
-            <h5 id="timer-display">10</h5>
-            <p id="answer-display" class="hide"></p>
-            <button id="next-button" class="hide"></button>
+            <button id="choice-1-btn"></button>
+            <button id="choice-2-btn"></button>
+            <button id="choice-3-btn"></button>
+            <button id="choice-4-btn"></button>
+            <div class = "timer">
+                <h4 id="timer-display">10</h4>
+            </div>
+            <div class = "answer">
+                <p id="answer-display" class="hide"></p>
+            </div>
+            <div class = "next">
+                <button id="next-button" class="hide">Next</button>
+            </div>
         </div>
     </section>
 
     <script src="js/question_answer.js"></script>
     <script src="js/script.js"></script>
 </body>
+
 </html>
-
-    <!-- <section>
-            <ol class="choices">
-                <button>
-                    <li>md</li>
-                </button>
-                <button>
-                    <li>cd</li>
-                </button>
-                <button>
-                    <li>vinyl</li>
-                </button>
-                <button>
-                    <li>cassette tape</li>
-                </button>
-            </ol>
-        </section>
-        <section class="score">
-            <p>All done!</p>
-            <p>Your score is:</p>
-        </section>
-        <section class="initials">
-            <p>Enter Initials:</p><input></input><button></button>
-        </section> -->
-
-    
