--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-    <h1 class="main-header text-center">Web Development Quiz</h1>
+    <header>
+    <h1 class="title text-center">Web Development Quiz</h1>
+    </header>
 
     <section class="start-page text-center">
         <button id="start-button">Start Quiz</button>
@@ -37,5 +39,7 @@
     <script src="js/question_answer.js"></script>
     <script src="js/script.js"></script>
 </body>
+
+<footer>&copy 2023 Zentai Designs</footer>
 
 </html>
