updated html to include high score btn; updated js syntax to include local storage functions

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             <div class = "next">
                 <button id="next-button" class="hide">Next</button>
             </div>
+            <div class = "scorecard hide" id="score">
+                <input type="text" placeholder="Enter your score here">
+                <button id="submit-button">Submit</button>
+            </div>
         </div>
     </section>
 
