--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <button id="start-button">Start Quiz</button>
 
         <div class="question-display hide">
+            <div>
             <h3 id="quest"></h3>
             <button id="choice-1-btn"></button>
             <button id="choice-2-btn"></button>
@@ -33,10 +34,11 @@
             <div class = "next">
                 <button id="next-button" class="hide">Next</button>
             </div>
-            <div class = "scorecard hide" id="score">
-                <input type="text" placeholder="Enter your score here">
-                <button id="submit-button">Submit</button>
             </div>
+        </div>
+        <div class ="scorecard hide" id="score">
+            <input type="text" placeholder="Enter your Initials here" id="user-initials">
+            <button id="submit-button">Submit</button>
         </div>
     </section>
 
