--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Development Quiz</title>
     <link rel="stylesheet"
-        href="C:\Users\dell\bootcamp\RUT-VIRT-FSF-FT-02-2023-U-LOLC\week_3\web_dev_quiz\css\style.css">
+        href="./css/style.css">
 </head>
 
 <body>
